<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MitraTerdekatActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/pengaturan_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/buttonmenu" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:contentDescription="@string/logo_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logogalonhub" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/fotoprofil_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fotoprofil" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/mitraterdekat_mt"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:contentDescription="@string/simbollokasi_homepage"
        app:layout_constraintStart_toStartOf="@+id/textView80"
        app:layout_constraintTop_toBottomOf="@+id/textView80"
        app:srcCompat="@drawable/lokasi" />

    <TextView
        android:id="@+id/textView82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/outfit_light"
        android:text="@string/namadaerah_homepage"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <TextView
        android:id="@+id/textView84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/outfit_light"
        android:text="@string/ubah_mt"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView82"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <TextView
        android:id="@+id/textView85"
        android:layout_width="295dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boxwithborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView82" />

    <TextView
        android:id="@+id/textView86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/galonro_mt"
        android:textColor="@color/darkgrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView85"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/textView85"
        app:layout_constraintTop_toTopOf="@+id/textView85" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="295dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxwithborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView85" />

    <TextView
        android:id="@+id/textView88"
        android:layout_width="295dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxwithborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView87" />

    <TextView
        android:id="@+id/textView89"
        android:layout_width="295dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxwithborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView88" />

    <TextView
        android:id="@+id/textView90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/yayawater_mt"
        android:textColor="@color/darkgrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView87"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/textView87"
        app:layout_constraintTop_toTopOf="@+id/textView87" />

    <TextView
        android:id="@+id/textView91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/aliencro_mt"
        android:textColor="@color/darkgrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView88"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/textView88"
        app:layout_constraintTop_toTopOf="@+id/textView88" />

    <TextView
        android:id="@+id/textView92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/depotfitext_mt"
        android:textColor="@color/darkgrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView89"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/textView89"
        app:layout_constraintTop_toTopOf="@+id/textView89" />

    <ImageView android:contentDescription="@string/simbollokasibiru"
        android:id="@+id/imageView29"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView86"
        app:layout_constraintTop_toBottomOf="@+id/textView86"
        app:srcCompat="@drawable/bluelocation" />

    <TextView
        android:id="@+id/textView93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/jarak1_mt"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/textView86"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView29" />

    <TextView
        android:id="@+id/textView94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/alamat1_mt"
        android:textColor="@color/darkgrey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/imageView29" />

    <TextView
        android:id="@+id/textView95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/nomorhp1_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView94"
        app:layout_constraintTop_toBottomOf="@+id/textView94" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/keteranganwaktu_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView86"
        app:layout_constraintTop_toTopOf="@+id/textView86" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/jarak2_mt"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/textView90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView30" />

    <ImageView android:contentDescription="@string/simbollokasibiru"
        android:id="@+id/imageView30"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView90"
        app:layout_constraintTop_toBottomOf="@+id/textView90"
        app:srcCompat="@drawable/bluelocation" />

    <TextView
        android:id="@+id/textView98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/alamat2_mt"
        android:textColor="@color/darkgrey"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView87"
        app:layout_constraintStart_toStartOf="@+id/imageView30"
        app:layout_constraintTop_toBottomOf="@+id/imageView30"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/nomorhp2_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView98"
        app:layout_constraintTop_toBottomOf="@+id/textView98" />

    <TextView
        android:id="@+id/textView100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/keteranganwaktu_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView90"
        app:layout_constraintTop_toTopOf="@+id/textView90" />

    <ImageView android:contentDescription="@string/simbollokasibiru"
        android:id="@+id/imageView31"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView91"
        app:layout_constraintTop_toBottomOf="@+id/textView91"
        app:srcCompat="@drawable/bluelocation" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/keteranganwaktu_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView91"
        app:layout_constraintTop_toTopOf="@+id/textView91" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/jarak3_mt"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView31" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/alamat3_mt"
        android:textColor="@color/darkgrey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/imageView31" />

    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/nomorhp3_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView103"
        app:layout_constraintTop_toBottomOf="@+id/textView103" />

    <ImageView android:contentDescription="@string/simbollokasibiru"
        android:id="@+id/imageView32"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView92"
        app:layout_constraintTop_toBottomOf="@+id/textView92"
        app:srcCompat="@drawable/bluelocation" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/keteranganwaktu_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView92"
        app:layout_constraintTop_toTopOf="@+id/textView92" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/jarak4_mt"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="@+id/imageView32" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/alamat4_mt"
        android:textColor="@color/darkgrey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/imageView32"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/nomorhp4_mt"
        android:textColor="@color/lightblue"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView107"
        app:layout_constraintTop_toBottomOf="@+id/textView107" />

    <Button
        android:id="@+id/button6"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/blue"
        android:text="@string/buttonkembali"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView89"
        app:layout_constraintVertical_bias="0.288" />
</androidx.constraintlayout.widget.ConstraintLayout>