<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LupaPasswordActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/lupapassword_lp"
        android:textColor="#39A7FF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="315dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputlogin1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/inputemail_lp"
        android:textColor="@color/black"
        android:autofillHints="emailAddress"
        android:textColorHint="#666161"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView79" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/outfit_light"
        android:text="@string/deskripsi_lp"
        android:textColor="#2D2626"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#39A7FF"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/buttonkirim_lp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <TextView
        android:id="@+id/textView83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/simbolbintang_register"
        android:textColor="#EB4335"
        app:layout_constraintEnd_toStartOf="@+id/textView81"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

</androidx.constraintlayout.widget.ConstraintLayout>